fixing layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   display: 'flex'; 
   justify-content: 'center';
   align-items: 'center';
-  margin-top:40px;
-  margin-bottom:0;
+  margin: 'auto';
   font-family: "Lucida Console", "Courier New", monospace;
 };
