--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,6 @@
 .cenText{
     text-align: center;
 }
+.navbar{
+    margin-bottom: 10px;
+}
